# homework_exposure

./: CMakeLists.txt  README.md  header.hpp  main.cpp  tesseract_OCR.cpp  tesseract_OCR.hpp
